# AdventOfCode2024

./: Cargo.toml  LICENSE  README.md  clippy.toml  justfile
crates/advent/src/: lib.rs
src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  template.rs
src/input/: 01.txt  02.txt
