[workspace]
members = ["crates/*"]

[package]
name = "advent2024"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
advent = { path = "crates/advent" }
just = "1.37.0"
itertools = "0.13.0"
nom = "7.1.3"
regex = "1.10.2"
glam = "0.24.2"

[[bin]]
name = "day01"
path = "src/01.rs"

[[bin]]
name = "day02"
path = "src/02.rs"

#[[bin]]
#name = "day03"
#path = "src/03.rs"

#[[bin]]
#name = "day04"
#path = "src/04.rs"

#[[bin]]
#name = "day05"
#path = "src/05.rs"

#[[bin]]
#name = "day06"
#path = "src/06.rs"

#[[bin]]
#name = "day07"
#path = "src/07.rs"

#[[bin]]
#name = "day08"
#path = "src/08.rs"

#[[bin]]
#name = "day09"
#path = "src/09.rs"

#[[bin]]
#name = "day10"
#path = "src/10.rs"

#[[bin]]
#name = "day11"
#path = "src/11.rs"

#[[bin]]
#name = "day12"
#path = "src/12.rs"

#[[bin]]
#name = "day13"
#path = "src/13.rs"

#[[bin]]
#name = "day14"
#path = "src/14.rs"

#[[bin]]
#name = "day15"
#path = "src/15.rs"

#[[bin]]
#name = "day16"
#path = "src/16.rs"

#[[bin]]
#name = "day17"
#path = "src/17.rs"

#[[bin]]
#name = "day18"
#path = "src/18.rs"

#[[bin]]
#name = "day19"
#path = "src/19.rs"

#[[bin]]
#name = "day20"
#path = "src/20.rs"

#[[bin]]
#name = "day21"
#path = "src/21.rs"

#[[bin]]
#name = "day22"
#path = "src/22.rs"

#[[bin]]
#name = "day23"
#path = "src/23.rs"

#[[bin]]
#name = "day24"
#path = "src/24.rs"

#[[bin]]
#name = "day25"
#path = "src/25.rs"
